# MuViS

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run.sh
configs/BeijingPM10Quality/: Catboost.yaml  LSTM.yaml  MLP.yaml  ResNet1D.yaml  Transformer.yaml  Xgboost.yaml
configs/BeijingPM25Quality/: Catboost.yaml  LSTM.yaml  MLP.yaml  ResNet1D.yaml  Transformer.yaml  Xgboost.yaml
configs/PPGDalia/: Catboost.yaml  LSTM.yaml  MLP.yaml  ResNet1D.yaml  Transformer.yaml  Xgboost.yaml
configs/Panasonic18650PFData/: Catboost.yaml  LSTM.yaml  MLP.yaml  ResNet1D.yaml  Transformer.yaml  Xgboost.yaml
configs/REVS/2013_Monterey_Motorsports_Reunion/: Catboost.yaml  LSTM.yaml  MLP.yaml  ResNet1D.yaml  Transformer.yaml  Xgboost.yaml
configs/REVS/2013_Targa_Sixty_Six/: Catboost.yaml  LSTM.yaml  MLP.yaml  ResNet1D.yaml  Transformer.yaml  Xgboost.yaml
configs/REVS/2014_Targa_Sixty_Six/: Catboost.yaml  LSTM.yaml  MLP.yaml  ResNet1D.yaml  Transformer.yaml  Xgboost.yaml
configs/TennesseeEastmanProcess/: Catboost.yaml  LSTM.yaml  MLP.yaml  ResNet1D.yaml  Transformer.yaml  Xgboost.yaml
configs/Tuning/: Catboost_search.yaml  LSTM_search.yaml  MLP_search.yaml  ResNet1D_search.yaml  Transformer_search.yaml  Xgboost_search.yaml
configs/VehicleDynamicsDataset/: Catboost.yaml  LSTM.yaml  MLP.yaml  ResNet1D.yaml  Transformer.yaml  Xgboost.yaml
notebooks/: load_data.ipynb
src/muvis/data_utils/: converters.py  muvis_dataset.py  preprocess.py
src/muvis/train/: run_nn_experiments.py  run_tree_experiments.py
src/muvis/utils/: architectures.py  seeding.py  (+4 more)
